[cleanup] Cleanup of the pom